[package]
name = "wasm-fuzzy"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde-wasm-bindgen = "*"
serde_json = "*"
serde = { version = "1.0", features = ["derive"] }
fuzzy-matcher = "*"
